backend/server.log
INFO:     Will watch for changes in these directories: ['C:\\Users\\maxli\\OneDrive\\Documentos\\Projects\\Hacktahon\\Chatbot\\marketing-copilot-cloudlabs\\backend']
INFO:     Uvicorn running on http://127.0.0.1:8000 (Press CTRL+C to quit)
INFO:     Started reloader process [50984] using StatReload
Process SpawnProcess-1:
Traceback (most recent call last):
  File "C:\Users\maxli\AppData\Local\Programs\Python\Python312\Lib\multiprocessing\process.py", line 314, in _bootstrap
    self.run()
  File "C:\Users\maxli\AppData\Local\Programs\Python\Python312\Lib\multiprocessing\process.py", line 108, in run
    self._target(*self._args, **self._kwargs)
  File "c:\Users\maxli\OneDrive\Documentos\Projects\Hacktahon\Chatbot\marketing-copilot-cloudlabs\backend\venv\Lib\site-packages\uvicorn\_subprocess.py", line 80, in subprocess_started
    target(sockets=sockets)
  File "c:\Users\maxli\OneDrive\Documentos\Projects\Hacktahon\Chatbot\marketing-copilot-cloudlabs\backend\venv\Lib\site-packages\uvicorn\server.py", line 65, in run
    return asyncio.run(self.serve(sockets=sockets))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\maxli\AppData\Local\Programs\Python\Python312\Lib\asyncio\runners.py", line 195, in run
    return runner.run(main)
           ^^^^^^^^^^^^^^^^
  File "C:\Users\maxli\AppData\Local\Programs\Python\Python312\Lib\asyncio\runners.py", line 118, in run
    return self._loop.run_until_complete(task)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\maxli\AppData\Local\Programs\Python\Python312\Lib\asyncio\base_events.py", line 691, in run_until_complete
    return future.result()
           ^^^^^^^^^^^^^^^
  File "c:\Users\maxli\OneDrive\Documentos\Projects\Hacktahon\Chatbot\marketing-copilot-cloudlabs\backend\venv\Lib\site-packages\uvicorn\server.py", line 69, in serve
    await self._serve(sockets)
  File "c:\Users\maxli\OneDrive\Documentos\Projects\Hacktahon\Chatbot\marketing-copilot-cloudlabs\backend\venv\Lib\site-packages\uvicorn\server.py", line 76, in _serve
    config.load()
  File "c:\Users\maxli\OneDrive\Documentos\Projects\Hacktahon\Chatbot\marketing-copilot-cloudlabs\backend\venv\Lib\site-packages\uvicorn\config.py", line 434, in load
    self.loaded_app = import_from_string(self.app)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "c:\Users\maxli\OneDrive\Documentos\Projects\Hacktahon\Chatbot\marketing-copilot-cloudlabs\backend\venv\Lib\site-packages\uvicorn\importer.py", line 19, in import_from_string
    module = importlib.import_module(module_str)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\maxli\AppData\Local\Programs\Python\Python312\Lib\importlib\__init__.py", line 90, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 999, in exec_module
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "C:\Users\maxli\OneDrive\Documentos\Projects\Hacktahon\Chatbot\marketing-copilot-cloudlabs\backend\main.py", line 10, in <module>
    from app.routers import analytics, chat, dashboard
  File "C:\Users\maxli\OneDrive\Documentos\Projects\Hacktahon\Chatbot\marketing-copilot-cloudlabs\backend\app\routers\chat.py", line 10, in <module>
    from app.services.llm_service import LLMService
  File "C:\Users\maxli\OneDrive\Documentos\Projects\Hacktahon\Chatbot\marketing-copilot-cloudlabs\backend\app\services\llm_service.py", line 91
    accionable para el equipo de Marketing de CloudLabs."""
                                                        ^
SyntaxError: unterminated triple-quoted string literal (detected at line 177)
WARNING:  StatReload detected changes in 'app\services\llm_service.py'. Reloading...
INFO:     Started server process [43332]
INFO:     Waiting for application startup.
C:\Users\maxli\OneDrive\Documentos\Projects\Hacktahon\Chatbot\marketing-copilot-cloudlabs\backend\app\services\data_loader.py:152: UserWarning: Parsing dates in %m/%d/%Y %H:%M format when dayfirst=True was specified. Pass `dayfirst=False` or specify a format to silence this warning.
  df["timestamp"] = pd.to_datetime(combined, errors="coerce", dayfirst=True)
INFO:     Application startup complete.
WARNING:  StatReload detected changes in 'app\services\llm_service.py'. Reloading...
